# wrapperize

./: Cargo.toml  README.md
.github/: funding.yml
.github/workflows/: rust.yml
src/: env.rs  error.rs  file.rs  main.rs  pacman_hook.rs  path.rs  script.rs  str.rs  wrapper.rs
