[package]
name = "wrapperize"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"

[profile.release]
codegen-units = 1
lto = true
strip = true

[dependencies]
anyhow = "1.0.100"
argh = "0.1.13"
indoc = "2.0.7"
strum = { version = "0.27.2", features = ["derive"] }
tap = "1.0.1"
thiserror = "2.0.18"
